unpackaged/main/default/objects/clazar__AWSCoSellOpportunity__c/clazar__AWSCoSellOpportunity__c.object-meta.xml
<CustomObject>
    <label>Clazar AWS Co-Sell Opportunity</label>
    <nameField>
        <displayFormat>CS# {00}</displayFormat>
        <label>AWS Co-Sell Opportunity Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clazar AWS Co-Sell Opportunities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>