unpackaged/main/default/objects/clazar__AWSCoSellOpportunity__c/fields/clazar__additional_comments__c.field-meta.xml
<CustomField>
    <fullName>clazar__additional_comments__c</fullName>
    <label>Action Required Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>