unpackaged/main/default/objects/clazar__AWSCoSellOpportunity__c/fields/clazar__apn_crm_unique_identifier__c.field-meta.xml
<CustomField>
    <fullName>clazar__apn_crm_unique_identifier__c</fullName>
    <label>APN CRM Unique Identifier</label>
    <length>120</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>