unpackaged/main/default/objects/clazar__AWSCoSellOpportunity__c/fields/clazar__apn_disqualified_reason__c.field-meta.xml
<CustomField>
    <fullName>clazar__apn_disqualified_reason__c</fullName>
    <label>APN Disqualified Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>