unpackaged/main/default/objects/clazar__AWSCoSellOpportunity__c/fields/clazar__apn_reviewer_comments__c.field-meta.xml
<CustomField>
    <fullName>clazar__apn_reviewer_comments__c</fullName>
    <label>APN Reviewer Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>