unpackaged/main/default/objects/clazar__AWSCoSellOpportunity__c/fields/clazar__aws_account_owner__c.field-meta.xml
<CustomField>
    <fullName>clazar__aws_account_owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AWS Account Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>AWS_Co_Sell_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>