unpackaged/main/default/objects/clazar__AWSCoSellOpportunity__c/fields/clazar__aws_close_date__c.field-meta.xml
<CustomField>
    <fullName>clazar__aws_close_date__c</fullName>
    <label>AWS Close Date</label>
    <type>DateTime</type>
</CustomField>