unpackaged/main/default/objects/clazar__AWSCoSellOpportunity__c/fields/clazar__aws_closed_lost_reason__c.field-meta.xml
<CustomField>
    <fullName>clazar__aws_closed_lost_reason__c</fullName>
    <label>AWS Closed Lost Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>