unpackaged/main/default/objects/clazar__AWSCoSellOpportunity__c/fields/clazar__aws_isv_success_manager__c.field-meta.xml
<CustomField>
    <fullName>clazar__aws_isv_success_manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AWS ISV Success Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>AWS_Co_Sell_Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>