unpackaged/main/default/objects/clazar__AWSCoSellOpportunity__c/fields/clazar__aws_marketplace_engagement_score__c.field-meta.xml
<CustomField>
    <fullName>clazar__aws_marketplace_engagement_score__c</fullName>
    <label>Engagement Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>