unpackaged/main/default/objects/clazar__AWSCoSellOpportunity__c/fields/clazar__aws_products__c.field-meta.xml
<CustomField>
    <fullName>clazar__aws_products__c</fullName>
    <label>AWS Products</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>