unpackaged/main/default/objects/clazar__AWSCoSellOpportunity__c/fields/clazar__aws_sales_rep__c.field-meta.xml
<CustomField>
    <fullName>clazar__aws_sales_rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AWS Sales Rep</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>AWS_Co_Sell_Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>