unpackaged/main/default/objects/clazar__AWSCoSellOpportunity__c/fields/clazar__aws_sales_rep_name__c.field-meta.xml
<CustomField>
    <fullName>clazar__aws_sales_rep_name__c</fullName>
    <label>AWS Sales Rep Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>