unpackaged/main/default/objects/clazar__AWSCoSellOpportunity__c/fields/clazar__aws_sf_campaign_name__c.field-meta.xml
<CustomField>
    <fullName>clazar__aws_sf_campaign_name__c</fullName>
    <label>Marketing Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>