unpackaged/main/default/objects/clazar__AWSCoSellOpportunity__c/fields/clazar__aws_stage__c.field-meta.xml
<CustomField>
    <fullName>clazar__aws_stage__c</fullName>
    <label>AWS Stage</label>
    <length>80</length>
    <type>Text</type>
</CustomField>