unpackaged/main/default/objects/clazar__AWSCoSellOpportunity__c/fields/clazar__campaign_name__c.field-meta.xml
<CustomField>
    <fullName>clazar__campaign_name__c</fullName>
    <label>APN Programs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>