unpackaged/main/default/objects/clazar__AWSCoSellOpportunity__c/fields/clazar__cloud_created_date__c.field-meta.xml
<CustomField>
    <fullName>clazar__cloud_created_date__c</fullName>
    <label>Created in AWS Date</label>
    <type>DateTime</type>
</CustomField>