unpackaged/main/default/objects/clazar__AWSCoSellOpportunity__c/fields/clazar__contract_end_date__c.field-meta.xml
<CustomField>
    <fullName>clazar__contract_end_date__c</fullName>
    <label>Contract End Date</label>
    <type>DateTime</type>
</CustomField>