unpackaged/main/default/objects/clazar__AWSCoSellOpportunity__c/fields/clazar__customer_company_name__c.field-meta.xml
<CustomField>
    <fullName>clazar__customer_company_name__c</fullName>
    <label>Company Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>