unpackaged/main/default/objects/clazar__AWSCoSellOpportunity__c/fields/clazar__customer_email__c.field-meta.xml
<CustomField>
    <fullName>clazar__customer_email__c</fullName>
    <label>Customer Email</label>
    <type>Email</type>
</CustomField>