unpackaged/main/default/objects/clazar__AWSCoSellOpportunity__c/fields/clazar__customer_last_name__c.field-meta.xml
<CustomField>
    <fullName>clazar__customer_last_name__c</fullName>
    <label>Customer Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>