unpackaged/main/default/objects/clazar__AWSCoSellOpportunity__c/fields/clazar__customer_phone__c.field-meta.xml
<CustomField>
    <fullName>clazar__customer_phone__c</fullName>
    <label>Customer Phone</label>
    <type>Phone</type>
</CustomField>