unpackaged/main/default/objects/clazar__AWSCoSellOpportunity__c/fields/clazar__customer_software_value__c.field-meta.xml
<CustomField>
    <fullName>clazar__customer_software_value__c</fullName>
    <label>Customer Software Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>