unpackaged/main/default/objects/clazar__AWSCoSellOpportunity__c/fields/clazar__customer_software_value_currency__c.field-meta.xml
<CustomField>
    <fullName>clazar__customer_software_value_currency__c</fullName>
    <label>Custom Software Value Currency</label>
    <length>50</length>
    <type>Text</type>
</CustomField>