unpackaged/main/default/objects/clazar__AWSCoSellOpportunity__c/fields/clazar__delivery_model__c.field-meta.xml
<CustomField>
    <fullName>clazar__delivery_model__c</fullName>
    <label>Delivery Model</label>
    <type>TextArea</type>
</CustomField>