unpackaged/main/default/objects/clazar__AWSCoSellOpportunity__c/fields/clazar__expected_monthly_aws_revenue__c.field-meta.xml
<CustomField>
    <fullName>clazar__expected_monthly_aws_revenue__c</fullName>
    <label>Estimated AWS MRR</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>