unpackaged/main/default/objects/clazar__AWSCoSellOpportunity__c/fields/clazar__is_action_required__c.field-meta.xml
<CustomField>
    <fullName>clazar__is_action_required__c</fullName>
    <label>Is Action Required</label>
    <length>255</length>
    <type>Text</type>
</CustomField>