unpackaged/main/default/objects/clazar__AWSCoSellOpportunity__c/fields/clazar__is_greenfield__c.field-meta.xml
<CustomField>
    <fullName>clazar__is_greenfield__c</fullName>
    <label>Greenfield</label>
    <length>100</length>
    <type>Text</type>
</CustomField>