unpackaged/main/default/objects/clazar__AWSCoSellOpportunity__c/fields/clazar__is_marketing_development_funded__c.field-meta.xml
<CustomField>
    <fullName>clazar__is_marketing_development_funded__c</fullName>
    <label>Marketing Funds Used</label>
    <length>255</length>
    <type>Text</type>
</CustomField>