unpackaged/main/default/objects/clazar__AWSCoSellOpportunity__c/fields/clazar__is_opp_from_marketing_activity__c.field-meta.xml
<CustomField>
    <fullName>clazar__is_opp_from_marketing_activity__c</fullName>
    <label>Marketing Originated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>