unpackaged/main/default/objects/clazar__AWSCoSellOpportunity__c/fields/clazar__is_this_for_marketplace__c.field-meta.xml
<CustomField>
    <fullName>clazar__is_this_for_marketplace__c</fullName>
    <label>Is This For Marketplace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>