unpackaged/main/default/objects/clazar__AWSCoSellOpportunity__c/fields/clazar__last_modified_date__c.field-meta.xml
<CustomField>
    <fullName>clazar__last_modified_date__c</fullName>
    <label>Last Modified Date</label>
    <type>DateTime</type>
</CustomField>