unpackaged/main/default/objects/clazar__AWSCoSellOpportunity__c/fields/clazar__last_synced_at__c.field-meta.xml
<CustomField>
    <fullName>clazar__last_synced_at__c</fullName>
    <label>Last Synced At</label>
    <type>DateTime</type>
</CustomField>