unpackaged/main/default/objects/clazar__AWSCoSellOpportunity__c/fields/clazar__MultiPickListField__c.field-meta.xml
<CustomField>
    <fullName>clazar__MultiPickListField__c</fullName>
    <label>MultiPickListField</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Option 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>