unpackaged/main/default/objects/clazar__AWSCoSellOpportunity__c/fields/clazar__need_support_from_aws__c.field-meta.xml
<CustomField>
    <fullName>clazar__need_support_from_aws__c</fullName>
    <label>Partner Need from AWS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>