unpackaged/main/default/objects/clazar__AWSCoSellOpportunity__c/fields/clazar__next_step__c.field-meta.xml
<CustomField>
    <fullName>clazar__next_step__c</fullName>
    <label>Next Step</label>
    <length>255</length>
    <type>Text</type>
</CustomField>