unpackaged/main/default/objects/clazar__AWSCoSellOpportunity__c/fields/clazar__next_step_details__c.field-meta.xml
<CustomField>
    <fullName>clazar__next_step_details__c</fullName>
    <label>Next Step Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>