unpackaged/main/default/objects/clazar__AWSCoSellOpportunity__c/fields/clazar__offers__c.field-meta.xml
<CustomField>
    <fullName>clazar__offers__c</fullName>
    <label>Private Offer ID</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>