unpackaged/main/default/objects/clazar__AWSCoSellOpportunity__c/fields/clazar__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>clazar__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mapped Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Clazar_AWS_CoSell_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>