unpackaged/main/default/objects/clazar__AWSCoSellOpportunity__c/fields/clazar__opportunity_type__c.field-meta.xml
<CustomField>
    <fullName>clazar__opportunity_type__c</fullName>
    <label>Opportunity Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>