unpackaged/main/default/objects/clazar__AWSCoSellOpportunity__c/fields/clazar__partner_acceptance_status__c.field-meta.xml
<CustomField>
    <fullName>clazar__partner_acceptance_status__c</fullName>
    <label>Partner Acceptance Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>