unpackaged/main/default/objects/clazar__AWSCoSellOpportunity__c/fields/clazar__partner_crm_unique_identifier__c.field-meta.xml
<CustomField>
    <fullName>clazar__partner_crm_unique_identifier__c</fullName>
    <label>Partner CRM Unique Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>