unpackaged/main/default/objects/clazar__AWSCoSellOpportunity__c/fields/clazar__partner_developer_manager__c.field-meta.xml
<CustomField>
    <fullName>clazar__partner_developer_manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Developer Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>AWS_Co_Sell_Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>