unpackaged/main/default/objects/clazar__AWSCoSellOpportunity__c/fields/clazar__partner_primary_need_from_aws__c.field-meta.xml
<CustomField>
    <fullName>clazar__partner_primary_need_from_aws__c</fullName>
    <description>This field is no longer used and will be removed in future versions.</description>
    <label>Partner Primary Need From AWS(Deprecate)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>