unpackaged/main/default/objects/clazar__AWSCoSellOpportunity__c/fields/clazar__partner_primary_need_from_aws_other__c.field-meta.xml
<CustomField>
    <fullName>clazar__partner_primary_need_from_aws_other__c</fullName>
    <label>Partner Primary Need From AWS Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>