unpackaged/main/default/objects/clazar__AWSCoSellOpportunity__c/fields/clazar__partner_project_title__c.field-meta.xml
<CustomField>
    <fullName>clazar__partner_project_title__c</fullName>
    <label>Project Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>