unpackaged/main/default/objects/clazar__AWSCoSellOpportunity__c/fields/clazar__primary_contact_email__c.field-meta.xml
<CustomField>
    <fullName>clazar__primary_contact_email__c</fullName>
    <label>Primary Contact Email</label>
    <type>Email</type>
</CustomField>