unpackaged/main/default/objects/clazar__AWSCoSellOpportunity__c/fields/clazar__primary_contact_phone__c.field-meta.xml
<CustomField>
    <fullName>clazar__primary_contact_phone__c</fullName>
    <label>Primary Contact Phone</label>
    <type>Phone</type>
</CustomField>