unpackaged/main/default/objects/clazar__AWSCoSellOpportunity__c/fields/clazar__procurement_type__c.field-meta.xml
<CustomField>
    <fullName>clazar__procurement_type__c</fullName>
    <label>Procurement Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>