unpackaged/main/default/objects/clazar__AWSCoSellOpportunity__c/fields/clazar__project_description__c.field-meta.xml
<CustomField>
    <fullName>clazar__project_description__c</fullName>
    <label>Project Description</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>