unpackaged/main/default/objects/clazar__AWSCoSellOpportunity__c/fields/clazar__recommended_next_best_actions2__c.field-meta.xml
<CustomField>
    <fullName>clazar__recommended_next_best_actions2__c</fullName>
    <label>Recommended Next Best Actions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>