unpackaged/main/default/objects/clazar__AWSCoSellOpportunity__c/fields/clazar__recommended_next_best_actions__c.field-meta.xml
<CustomField>
    <fullName>clazar__recommended_next_best_actions__c</fullName>
    <label>Recommended Next Best Actions-Deprecated</label>
    <type>TextArea</type>
</CustomField>