unpackaged/main/default/objects/clazar__AWSCoSellOpportunity__c/fields/clazar__rejection_reason__c.field-meta.xml
<CustomField>
    <fullName>clazar__rejection_reason__c</fullName>
    <label>Rejection Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>