unpackaged/main/default/objects/clazar__AWSCoSellOpportunity__c/fields/clazar__sale_stage__c.field-meta.xml
<CustomField>
    <fullName>clazar__sale_stage__c</fullName>
    <label>Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>