unpackaged/main/default/objects/clazar__AWSCoSellOpportunity__c/fields/clazar__solution_offered__c.field-meta.xml
<CustomField>
    <fullName>clazar__solution_offered__c</fullName>
    <label>Solution Offered</label>
    <type>TextArea</type>
</CustomField>