unpackaged/main/default/objects/clazar__AWSCoSellOpportunity__c/fields/clazar__status__c.field-meta.xml
<CustomField>
    <fullName>clazar__status__c</fullName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>