unpackaged/main/default/objects/clazar__AWSCoSellOpportunity__c/fields/clazar__use_case__c.field-meta.xml
<CustomField>
    <fullName>clazar__use_case__c</fullName>
    <label>Use Case</label>
    <length>255</length>
    <type>Text</type>
</CustomField>