unpackaged/main/default/objects/clazar__AWSCoSellOpportunity__c/fields/clazar__uuid__c.field-meta.xml
<CustomField>
    <fullName>clazar__uuid__c</fullName>
    <externalId>true</externalId>
    <label>Clazar Id</label>
    <length>120</length>
    <type>Text</type>
</CustomField>