unpackaged/main/default/objects/clazar__AWSCoSellOpportunity__c/fields/clazar__wwps_pdm__c.field-meta.xml
<CustomField>
    <fullName>clazar__wwps_pdm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WWPS PDM</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>AWS_Co_Sell_Opportunities5</relationshipName>
    <type>Lookup</type>
</CustomField>